kubernetes-configurations/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: ghcr.io/midnightrocket-education/devops-e24/simple-fortune/frontend:latest
        name: frontend-container
        ports:
          - containerPort: 8080
